feat(components): Add numberOfLines prop to Text component (#401)
* Add numberOfLines property to Text component to truncate the text

* Updating snapshots

* Updating snapshots to make style conditional

* Remove the paragraph alignment from Tag

* Use object destructuring for selectedVariation

* Update snapshot for Text component test

* Fix Text  mdx and remove white-space css property

* Add test for numberOfLines property

* Having presets instead of allowing numbers

* remove extra bit of description of maxLines prop

* use medium over base for consistency

* Revert "use medium over base for consistency"

This reverts commit aaede358b63bd1e28e738749db37b609265cf5ac.

* replace concept of base with medium

* use Content for formatting in mdx

* use base for consistency, add default prop

Co-authored-by: Zak Hughes <zakary.h@getjobber.com>

--- a/packages/components/src/FormatDate/FormatDate.mdx
+++ b/packages/components/src/FormatDate/FormatDate.mdx
@@ -28,11 +28,15 @@ import { FormatDate } from "@jobber/components/FormatDate";
 
 ## Design & Usage Guidelines
 
-Use FormatDate to ensure that a date is represented as expected. 
+Use FormatDate to ensure that a date is represented as expected.
 
-If there are additional text styling concerns, wrap FormatDate in a [Text](https://atlantis.getjobber.com/packages-components-src-text-text) component.
+If there are additional text styling concerns, wrap FormatDate in a
+[Text](https://atlantis.getjobber.com/packages-components-src-text-text)
+component.
 
-If the formatted date is intended to be part of a heading, wrap FormatDate in a [Heading](https://atlantis.getjobber.com/packages-components-src-heading-heading) component.
+If the formatted date is intended to be part of a heading, wrap FormatDate in a
+[Heading](https://atlantis.getjobber.com/packages-components-src-heading-heading)
+component.
 
 ## Props
 
