--- a/packages/components/src/InputPassword/InputPassword.mdx
+++ b/packages/components/src/InputPassword/InputPassword.mdx
@@ -25,9 +25,12 @@ import { InputPassword } from "@jobber/components/InputPassword";
 
 ## Design & Usage Guidelines
 
-Use InputPassword for authentication flows where the user is required to enter a password. 
+Use InputPassword for authentication flows where the user is required to enter a
+password.
 
-If you are building an experience for authentication that does not require character-masking, consider using [InputText](https://atlantis.getjobber.com/components/input-text).
+If you are building an experience for authentication that does not require
+character-masking, consider using
+[InputText](https://atlantis.getjobber.com/components/input-text).
 
 ## Props
 
