--- a/packages/components/src/Text/Text.mdx
+++ b/packages/components/src/Text/Text.mdx
@@ -5,6 +5,7 @@ menu: Components
 import { Playground, Props } from "docz";
 import { ComponentStatus } from "@jobber/docx";
 import { Text } from ".";
+import { Content } from "../Content/";
 
 # Text
 
@@ -59,6 +60,73 @@ De-emphasize a piece of text that is less important to the user
   <Text variation="info">
     Drag to rearrange the order that fields show up in Jobber
   </Text>
+</Playground>
+
+## maxLines
+
+Used to truncate large text with `...` based on line wrapping, such that the
+total number of lines does not exceed the preset. This is an optional prop. If
+left undefined all the contents are shown.
+
+<Playground>
+  <Content>
+    <Text maxLines="single">
+      This will show 1 line. Lorem ipsum dolor sit amet, consectetur adipiscing
+      elit. Vestibulum nec pulvinar nunc. Suspendisse nec eros pretium, rutrum
+      purus sit amet, finibus ante. Donec pretium condimentum scelerisque.
+    </Text>
+
+    <Text maxLines="small">
+      This will show 2 lines. Lorem ipsum dolor sit amet, consectetur adipiscing
+      elit. Vestibulum nec pulvinar nunc. Suspendisse nec eros pretium, rutrum
+      purus sit amet, finibus ante. Donec pretium condimentum scelerisque. Duis eu
+      ligula nec metus suscipit feugiat.Etiam sapien sapien, mattis eu tincidunt
+      quis, pretium sed metus. Maecenas quis dolor lacinia libero rhoncus
+      fringilla. Cras mi ante, euismod nec tortor in, tempus mollis nulla.
+    </Text>
+
+    <Text maxLines="base">
+      This will show 4 lines. Lorem ipsum dolor sit amet, consectetur adipiscing
+      elit. Vestibulum nec pulvinar nunc. Suspendisse nec eros pretium, rutrum
+      purus sit amet, finibus ante. Donec pretium condimentum scelerisque. Duis eu
+      ligula nec metus suscipit feugiat.Etiam sapien sapien, mattis eu tincidunt
+      quis, pretium sed metus. Maecenas quis dolor lacinia libero rhoncus
+      fringilla. Cras mi ante, euismod nec tortor in, tempus mollis nulla.
+    </Text>
+
+    <Text maxLines="large">
+      This will show 8 lines. Lorem ipsum dolor sit amet, consectetur adipiscing
+      elit. Vestibulum nec pulvinar nunc. Suspendisse nec eros pretium, rutrum
+      purus sit amet, finibus ante. Donec pretium condimentum scelerisque. Duis eu
+      ligula nec metus suscipit feugiat.Etiam sapien sapien, mattis eu tincidunt
+      quis, pretium sed metus. Maecenas quis dolor lacinia libero rhoncus
+      fringilla. Cras mi ante, euismod nec tortor in, tempus mollis nulla. Etiam
+      eu lacus nibh. Donec tristique lacus magna, vulputate tristique lacus
+      blandit vitae. Aenean vitae commodo metus. Fusce eu risus quis orci pharetra
+      consequat nec nec libero.
+    </Text>
+
+    <Text maxLines="larger">
+      This will show 16 lines. Lorem ipsum dolor sit amet, consectetur adipiscing
+      elit. Vestibulum nec pulvinar nunc. Suspendisse nec eros pretium, rutrum
+      purus sit amet, finibus ante. Donec pretium condimentum scelerisque. Duis eu
+      ligula nec metus suscipit feugiat.Etiam sapien sapien, mattis eu tincidunt
+      quis, pretium sed metus. Maecenas quis dolor lacinia libero rhoncus
+      fringilla. Cras mi ante, euismod nec tortor in, tempus mollis nulla. Etiam
+      eu lacus nibh. Donec tristique lacus magna, vulputate tristique lacus
+      blandit vitae. Aenean vitae commodo metus. Fusce eu risus quis orci pharetra
+      consequat nec nec libero. Lorem ipsum dolor sit amet, consectetur adipiscing
+      elit. Vestibulum nec pulvinar nunc. Suspendisse nec eros pretium, rutrum
+      purus sit amet, finibus ante. Donec pretium condimentum scelerisque. Duis eu
+      ligula nec metus suscipit feugiat.Etiam sapien sapien, mattis eu tincidunt
+      quis, pretium sed metus. Maecenas quis dolor lacinia libero rhoncus
+      fringilla. Cras mi ante, euismod nec tortor in, tempus mollis nulla. Etiam
+      eu lacus nibh. Donec tristique lacus magna, vulputate tristique lacus
+      blandit vitae. Aenean vitae commodo metus. Fusce eu risus quis orci pharetra
+      consequat nec nec libero.
+    </Text>
+
+  </Content>
 </Playground>
 
 ## Sizes
