--- a/packages/components/src/DescriptionList/DescriptionList.mdx
+++ b/packages/components/src/DescriptionList/DescriptionList.mdx
@@ -51,7 +51,7 @@ You are able to pass a react element in as the second term of the data tuple.
 
 ## Related components
 
-* To list more complex collections of related information, consider using a
-[List](https://atlantis.getjobber.com/components/list).
-* To display structured data for comparison, consider using a
-[Table](https://atlantis.getjobber.com/components/table).
+- To list more complex collections of related information, consider using a
+  [List](https://atlantis.getjobber.com/components/list).
+- To display structured data for comparison, consider using a
+  [Table](https://atlantis.getjobber.com/components/table).
