spinner now works on input as an icon

--- a/packages/components/src/InputText/InputText.mdx
+++ b/packages/components/src/InputText/InputText.mdx
@@ -229,6 +229,19 @@ Determine what default keyboard appears on mobile web.
   />
 </Playground>
 
+## Spinner
+
+Add a loading state to content.
+
+<Playground>
+  <InputText
+    placeholder="Checking phone number"
+    name="phoneNumber"
+    showSpinner={true}
+    keyboard="numeric"
+  />
+</Playground>
+
 ## Using onValidation
 
 If you need to capture the error message and render it outside of the component.
