--- a/packages/components/src/InputText/InputText.mdx
+++ b/packages/components/src/InputText/InputText.mdx
@@ -229,7 +229,7 @@ Determine what default keyboard appears on mobile web.
   />
 </Playground>
 
-## Spinner
+## Loading
 
 Add a loading state to content.
 
@@ -237,7 +237,7 @@ Add a loading state to content.
   <InputText
     placeholder="Checking phone number"
     name="phoneNumber"
-    showSpinner={true}
+    loading={true}
     keyboard="numeric"
   />
 </Playground>
