build: @jobber/docz-tools package (#449)
* remove the old theme

* moves md to docs directory

* creates docz-tools package and uses it

* update the doczrc

* set up gatsby to use the new theme

* resets the theme

* adds typography

* clean up typography

* aligns content in Layout

* styles blockquote

* styles links

* style lists

* style code blocks

* makes sidebar width adjustable

* adds Sidebar component

* Adds first layer of navigation

* organize the README files

* adds the navigation

* adds the logo component

* adds search box to Sidebar

* fixes broken search

* allow sidebar to scroll

* adds Actions

* adds Actions

* adds the Props table

* use Divider for hr

* styles Playground

* styles the playground handle

* move sideBarWidth to theme

* add containerWidth to config

* use containerWidth in Layout

* adds Playground component

* add darkBlue color to body text

* add zIndex to actions

* use atlantis table for tables

* makes navigation scroll to active item

* add README to new package

* hide private components

* make build work

* make build work

* make linter happy

* gets build working

* does atlantis check before aliasing

* move null loader to root

* Check for netlify before aliasing

* move aliases to root

* add jobber alias to build

* change circle to use build

* move root styles to css

* make start work

* update routes for package mdx

* remove null md loader from docz-tools

* Adds ensure changelog headers back in

* PR feedback

* make playground work

* Move playground to css modules

* move postcss to docz-tools

* revert past commits

* makes css more readable

* compare envvar

* equals one more

--- a/packages/docx/README.mdx
+++ b/packages/docx/README.mdx
@@ -1,6 +1,6 @@
 ---
 name: Docs Helpers
-route: /docx
+route: /packages/docx
 ---
 
 import { Playground, Props } from "docz";
@@ -15,6 +15,8 @@ Helper components for the Atlantis internal docs viewer.
 <Playground>
   <ComponentStatus stage="rc" responsive="no" accessible="yes" />
 </Playground>
+
+### Props
 
 <Props of={ComponentStatus} />
 
@@ -32,5 +34,7 @@ Helper components for the Atlantis internal docs viewer.
     }}
   />
 </Playground>
+
+### Props
 
 <Props of={ColorSwatches} />
