--- a/packages/components/src/Banner/Banner.mdx
+++ b/packages/components/src/Banner/Banner.mdx
@@ -33,8 +33,13 @@ import { Banner } from "@jobber/components/Banner";
 
 ## Notice message
 
-**Use notice banners to provide information about new functionality, background
-operations, or general non-blocking advice.**
+Use notice banners to provide information about:
+
+<ul>
+  <li>new functionality</li>
+  <li>background operations</li>
+  <li>general non-blocking advice</li>
+</ul>
 
 Notices should get to the point and inform the user about why the functionality
 or change is important if context is not provided elsewhere.
@@ -47,8 +52,14 @@ or change is important if context is not provided elsewhere.
 
 ## Success message
 
-**Use [toasts](toast) as the default for success messages. Success banners are
-appropriate when success feedback had a call to action or is delayed.**
+Success banners are appropriate when:
+
+<ul>
+  <li>success feedback had a call to action</li>
+  <li>success feeback is delayed</li>
+</ul>
+
+Otherwise, use [toasts](toast) as the default for success messages.
 
 <Playground>
   <Banner
@@ -65,8 +76,12 @@ appropriate when success feedback had a call to action or is delayed.**
 
 ## Warning message
 
-**Use warning banners when something requires when an action could have unseen
-consequences or additional action has to be taken.**
+Use warning banners when:
+
+<ul>
+  <li>an action could have unseen consequences</li>
+  <li>additional action has to be taken by the user</li>
+</ul>
 
 Warning messages should be one to two short sentences which clearly describe the
 possibly unknown impact a user’s changes or actions will have. They should not
@@ -82,12 +97,19 @@ workflow.
 
 ## Error message
 
-**Use error banners when something requires immediate attention and blocks the
-user.**
+Use error banners when:
+
+<ul>
+  <li>something requires immediate attention</li>
+  <li>blocks the user</li>
+</ul>
 
 Errors should explain what happened, and summarize how many issues need to be
 addressed in a concise manner. Detailed information about each error is the role
 of the [input validation](input-validation) component.
+
+For more guidance on wording, check out the
+[Product Vocabulary](../guides/product-vocabulary).
 
 <Playground>
   <Banner type="error">
@@ -121,7 +143,7 @@ within a `Banner`. If you require an action, use the `primaryActions` prop. The
       type="notice"
       primaryAction={{
         label: "View Plans",
-        onClick: () => alert("💥💥SMASH💥💥")
+        onClick: () => alert("Plans")
       }}
       dismissible={false}
     >
@@ -131,7 +153,7 @@ within a `Banner`. If you require an action, use the `primaryActions` prop. The
       type="error"
       primaryAction={{
         label: "Refresh",
-        onClick: () => alert("😡😡😡")
+        onClick: () => alert("Refreshing")
       }}
     >
       Network is unavailable. Please check your internet connection.
