--- a/packages/components/src/FormatDate/FormatDate.mdx
+++ b/packages/components/src/FormatDate/FormatDate.mdx
@@ -1,10 +1,8 @@
-## import {Text} from "../Text";
-
-name: FormatDate menu: Components route: /components/date-formatter
-
 ---
-
-import { Playground, Props } from "docz";
+name: FormatDate
+menu: Components
+route: /components/date-formatter
+---import { Playground, Props } from "docz";
 import { ComponentStatus } from "@jobber/docx";
 import { CivilDate } from "@std-proposal/temporal";
 import { FormatDate, strFormatDate } from ".";
