Fix auto format glitch

--- a/packages/components/src/FormatDate/FormatDate.mdx
+++ b/packages/components/src/FormatDate/FormatDate.mdx
@@ -1,9 +1,12 @@
 ---
-
-name: FormatDate menu: Components route: /components/date-formatter ---import {
-Playground, Props } from "docz"; import { ComponentStatus } from "@jobber/docx";
-import { CivilDate } from "@std-proposal/temporal"; import { FormatDate,
-strFormatDate } from "."; import { Text } from "../Text";
+name: FormatDate
+menu: Components
+route: /components/date-formatter
+---import { Playground, Props } from "docz";
+import { ComponentStatus } from "@jobber/docx";
+import { CivilDate } from "@std-proposal/temporal";
+import { FormatDate, strFormatDate } from ".";
+import { Text } from "../Text";
 
 # FormatDate
 
