Undo auto formatting bug

--- a/packages/components/src/FormatDate/FormatDate.mdx
+++ b/packages/components/src/FormatDate/FormatDate.mdx
@@ -2,7 +2,9 @@
 name: FormatDate
 menu: Components
 route: /components/date-formatter
----import { Playground, Props } from "docz";
+---
+
+import { Playground, Props } from "docz";
 import { ComponentStatus } from "@jobber/docx";
 import { CivilDate } from "@std-proposal/temporal";
 import { FormatDate, strFormatDate } from ".";
