--- a/packages/components/src/FormatDate/FormatDate.mdx
+++ b/packages/components/src/FormatDate/FormatDate.mdx
@@ -7,7 +7,8 @@ route: /components/date-formatter
 import { Playground, Props } from "docz";
 import { ComponentStatus } from "@jobber/docx";
 import { CivilDate } from "@std-proposal/temporal";
-import { FormatDate } from ".";
+import { FormatDate, strFormatDate } from ".";
+import { Text } from "../Text";
 
 # FormatDate
 
@@ -26,6 +27,19 @@ import { FormatDate } from "@jobber/components/FormatDate";
   <FormatDate date={new CivilDate(2020, 2, 26)} />
 </Playground>
 
+## Getting a string version
+
+Use strFormateDate if you need your formatted date as a string so it can be
+passed as an attribute that doesn't allow for a component.
+
+```ts
+import { strFormatDate } from "@jobber/components/FormatDate";
+```
+
+<Playground>
+  <Text>{strFormatDate(new Date())}</Text>
+</Playground>
+
 ## Design & Usage Guidelines
 
 Use FormatDate to ensure that a date is represented as expected.
@@ -37,6 +51,8 @@ component.
 If the formatted date is intended to be part of a heading, wrap FormatDate in a
 [Heading](https://atlantis.getjobber.com/packages-components-src-heading-heading)
 component.
+
+If you require a string instead of a component use strFormatDate.
 
 ## Props
 
