update image path

--- a/docs/guides/create-basic-component.mdx
+++ b/docs/guides/create-basic-component.mdx
@@ -102,7 +102,7 @@ main categories.
 
 ### Imports
 
-![Imports](./imports.png)
+![Imports](imports.png)
 
 We'll get in to more detail about the `styles` later. Also, I've deleted the
 `classname` import from the boilerplate because that needs its own
