feat: allows images to be rendered through a component (#475)
* allows images to be rendered through a component

* adds docz-tools to semantic pr titls

* update image path

--- a/docs/guides/create-basic-component.mdx
+++ b/docs/guides/create-basic-component.mdx
@@ -102,10 +102,7 @@ main categories.
 
 ### Imports
 
-<img
-  src="/public/assets/images/create-react-component/imports.png"
-  style={{ maxWidth: "100%" }}
-/>
+![Imports](imports.png)
 
 We'll get in to more detail about the `styles` later. Also, I've deleted the
 `classname` import from the boilerplate because that needs its own
