add in state to example

--- a/packages/components/src/InputValidation/InputValidation.mdx
+++ b/packages/components/src/InputValidation/InputValidation.mdx
@@ -27,6 +27,7 @@ import { InputValidation } from "@jobber/components/InputValidation";
 
 <Playground>
   {() => {
+    const [validationMessages, setValidationMessages] = useState(undefined);
     return <div>Foo</div>;
   }}
 </Playground>
