--- a/packages/components/src/Banner/Banner.mdx
+++ b/packages/components/src/Banner/Banner.mdx
@@ -66,7 +66,7 @@ Otherwise, use [toasts](toast) as the default for success messages.
     type="success"
     primaryAction={{
       label: "View clients",
-      onClick: () => alert("🎉 Woo hoo")
+      onClick: () => alert("🎉 Woo hoo"),
     }}
     dismissible={false}
   >
@@ -143,7 +143,7 @@ within a `Banner`. If you require an action, use the `primaryActions` prop. The
       type="notice"
       primaryAction={{
         label: "View Plans",
-        onClick: () => alert("Plans")
+        onClick: () => alert("Plans"),
       }}
       dismissible={false}
     >
@@ -153,7 +153,7 @@ within a `Banner`. If you require an action, use the `primaryActions` prop. The
       type="error"
       primaryAction={{
         label: "Refresh",
-        onClick: () => alert("Refreshing")
+        onClick: () => alert("Refreshing"),
       }}
     >
       Network is unavailable. Please check your internet connection.
