--- a/packages/components/src/Card/Card.mdx
+++ b/packages/components/src/Card/Card.mdx
@@ -75,7 +75,7 @@ removed, and it may be worth re-assessing the hierarchy of your interface.
 
 <Playground>
   <Card
-    onClick={e => {
+    onClick={(e) => {
       alert("😻");
       console.log(e.currentTarget);
     }}
