--- a/packages/components/src/FeatureSwitch/FeatureSwitch.mdx
+++ b/packages/components/src/FeatureSwitch/FeatureSwitch.mdx
@@ -69,7 +69,7 @@ payments for a single invoice, use the
 <Playground>
   <FeatureSwitch
     description="Send a notification to your client following up on an outstanding quote"
-    onSwitch={newValue => {
+    onSwitch={(newValue) => {
       console.log(`Feature ${newValue ? "enabled" : "disabled"}`);
     }}
   />
