--- a/packages/components/src/InputPassword/InputPassword.mdx
+++ b/packages/components/src/InputPassword/InputPassword.mdx
@@ -58,12 +58,12 @@ character-masking, consider using
     validations={{
       required: {
         value: true,
-        message: "You need a password."
+        message: "You need a password.",
       },
       minLength: {
         value: 10,
-        message: "Passwords should be at least 10 characters."
-      }
+        message: "Passwords should be at least 10 characters.",
+      },
     }}
   />
 </Playground>
