--- a/packages/components/src/InputTime/InputTime.mdx
+++ b/packages/components/src/InputTime/InputTime.mdx
@@ -67,7 +67,7 @@ When the last element is set the change event will fire.
     const resetTime = () => {
       setTime(new CivilTime(3, 52));
     };
-    const handleChange = newTime => {
+    const handleChange = (newTime) => {
       setTime(newTime);
     };
     return (
