--- a/packages/components/src/LightBox/LightBox.mdx
+++ b/packages/components/src/LightBox/LightBox.mdx
@@ -38,16 +38,16 @@ import { LightBox } from "@jobber/components/LightBox";
             {
               title: "😃 Happy Face",
               url: "https://i.imgur.com/6Jcfgnp.jpg",
-              caption: "This is a happy face"
+              caption: "This is a happy face",
             },
             {
               title: "😮",
               url: "https://i.imgur.com/OsLxYkT.jpg",
-              caption: "Suprised face"
+              caption: "Suprised face",
             },
             {
-              url: "https://i.imgur.com/uigfzs5.jpg"
-            }
+              url: "https://i.imgur.com/uigfzs5.jpg",
+            },
           ]}
           onRequestClose={() => isOpen(false)}
         />
@@ -90,18 +90,18 @@ analytics).
             {
               title: "😃 Happy Face",
               url: "https://i.imgur.com/6Jcfgnp.jpg",
-              caption: "This is a happy face"
+              caption: "This is a happy face",
             },
             {
               title: "😮",
               url: "https://i.imgur.com/OsLxYkT.jpg",
-              caption: "Suprised face"
+              caption: "Suprised face",
             },
             {
-              url: "https://i.imgur.com/uigfzs5.jpg"
-            }
+              url: "https://i.imgur.com/uigfzs5.jpg",
+            },
           ]}
-          onRequestClose={options => {
+          onRequestClose={(options) => {
             console.log(
               "The user was saw this image last - ",
               options.lastPosition
