--- a/packages/components/src/List/List.mdx
+++ b/packages/components/src/List/List.mdx
@@ -33,7 +33,7 @@ import { List } from "@jobber/components/List";
           content: "Payment for Invoice #39",
           value: "-$300.00",
           caption: "Sep 25, 2019",
-          onClick: () => alert("TODO: Implement onClick")
+          onClick: () => alert("TODO: Implement onClick"),
         },
         {
           id: 3,
@@ -41,8 +41,8 @@ import { List } from "@jobber/components/List";
           content: "Invoice #39",
           value: "$300.00",
           caption: "Sep 24, 2019",
-          onClick: () => alert("TODO: Implement onClick")
-        }
+          onClick: () => alert("TODO: Implement onClick"),
+        },
       ]}
     />
   </Card>
@@ -72,12 +72,12 @@ This groups the component in specific sections.
           title: "Darryl Tec added a note",
           content: [
             '_"Called the client. Asked if they want the luxury package, they said yes!"_',
-            "Deck Build"
+            "Deck Build",
           ],
           caption: "1 minute ago",
           section: "Today",
           isActive: true,
-          onClick: () => alert("TODO: Implement onClick")
+          onClick: () => alert("TODO: Implement onClick"),
         },
         {
           id: 2,
@@ -87,7 +87,7 @@ This groups the component in specific sections.
           content: "Annual Maintenance",
           caption: "2 hours ago",
           section: "Today",
-          onClick: () => alert("TODO: Implement onClick")
+          onClick: () => alert("TODO: Implement onClick"),
         },
         {
           id: 3,
@@ -97,8 +97,8 @@ This groups the component in specific sections.
           value: "$300.00",
           caption: "1 day ago",
           onClick: () => alert("TODO: Implement onClick"),
-          section: "Yesterday"
-        }
+          section: "Yesterday",
+        },
       ]}
     />
   </Card>
