--- a/packages/components/src/Select/Select.mdx
+++ b/packages/components/src/Select/Select.mdx
@@ -94,7 +94,7 @@ import { Select, Option } from "@jobber/components/Select";
 ## Events
 
 <Playground>
-  <Select onChange={x => console.log(x)}>
+  <Select onChange={(x) => console.log(x)}>
     <Option value="sad">Tony</Option>
     <Option value="old">Steve</Option>
   </Select>
