--- a/packages/design/src/Spacing.mdx
+++ b/packages/design/src/Spacing.mdx
@@ -12,7 +12,7 @@ export function Example({ of: size }) {
   const style = {
     width: `var(--space-${size})`,
     height: "var(--space-base)",
-    backgroundColor: "var(--color-indigo)"
+    backgroundColor: "var(--color-indigo)",
   };
   return <div style={style} />;
 }
