--- a/packages/docx/README.mdx
+++ b/packages/docx/README.mdx
@@ -30,7 +30,7 @@ Helper components for the Atlantis internal docs viewer.
       "--color-pink--light": "rgb(202, 144, 182)",
       "--color-pink--lighter": "rgb(225, 191, 213)",
       "--color-pink--lightest": "rgb(244, 231, 239)",
-      "--color-pink--dark": "rgb(116, 62, 98)"
+      "--color-pink--dark": "rgb(116, 62, 98)",
     }}
   />
 </Playground>
