--- a/packages/components/src/Autocomplete/Autocomplete.mdx
+++ b/packages/components/src/Autocomplete/Autocomplete.mdx
@@ -82,7 +82,7 @@ bottom right. Both of these are optional per option.
         value: 1,
         label: "Sulaco",
         description: "They mostly come at night, mostly.",
-        details: "LV-426"
+        details: "LV-426",
       },
       { value: 2, label: "Nostromo", details: "LV-426" },
       { value: 3, label: "Serenity", description: "I aim to misbehave." },
@@ -92,8 +92,8 @@ bottom right. Both of these are optional per option.
         value: 6,
         label: "Enterprise-D",
         description: "Tea, earl grey, hot.",
-        details: "NCC-1701D"
-      }
+        details: "NCC-1701D",
+      },
     ];
     const [value, setValue] = useState();
     return (
@@ -110,7 +110,7 @@ bottom right. Both of these are optional per option.
         return options;
       }
       const filterRegex = new RegExp(text, "i");
-      return options.filter(option =>
+      return options.filter((option) =>
         option.heading ? true : option.label.match(filterRegex)
       );
     }
@@ -132,8 +132,8 @@ An autocomplete can provide section headings to break up the options.
           { value: 3, label: "Serenity" },
           { value: 4, label: "Sleeper Service" },
           { value: 5, label: "Enterprise" },
-          { value: 6, label: "Enterprise-D" }
-        ]
+          { value: 6, label: "Enterprise-D" },
+        ],
       },
       {
         label: "Planets",
@@ -141,9 +141,9 @@ An autocomplete can provide section headings to break up the options.
           { value: 7, label: "Endor" },
           { value: 8, label: "Vulcan" },
           { value: 9, label: "Bespin" },
-          { value: 10, label: "Tatooine" }
-        ]
-      }
+          { value: 10, label: "Tatooine" },
+        ],
+      },
     ];
     const [value, setValue] = useState();
     return (
@@ -165,7 +165,7 @@ An autocomplete can provide section headings to break up the options.
      * In reality an api should return this pre-formatted structure.
      */
     function filterOptions(text, options = []) {
-      return options.filter(option => {
+      return options.filter((option) => {
         if (option.options) {
           option.options = filterOptions(text, option.options);
           return true;
@@ -192,7 +192,7 @@ separators.
             value: 1,
             label: "Sulaco",
             description: "They mostly come at night, mostly.",
-            details: "LV-426"
+            details: "LV-426",
           },
           { value: 2, label: "Nostromo", details: "LV-426" },
           { value: 3, label: "Serenity", description: "I aim to misbehave." },
@@ -202,9 +202,9 @@ separators.
             value: 6,
             label: "Enterprise-D",
             description: "Tea, earl grey, hot.",
-            details: "NCC-1701D"
-          }
-        ]
+            details: "NCC-1701D",
+          },
+        ],
       },
       {
         label: "Planets",
@@ -214,9 +214,9 @@ separators.
           { value: 9, label: "Bespin" },
           { value: 10, label: "Tatooine" },
           { value: 11, label: "Enterprise" },
-          { value: 12, label: "Ariel" }
-        ]
-      }
+          { value: 12, label: "Ariel" },
+        ],
+      },
     ];
     const [value, setValue] = useState();
     return (
@@ -238,7 +238,7 @@ separators.
      * In reality an api should return this pre-formatted structure.
      */
     function filterOptions(text, options = []) {
-      return options.filter(option => {
+      return options.filter((option) => {
         if (option.options) {
           option.options = filterOptions(text, option.options);
           return true;
@@ -262,7 +262,7 @@ You can supply a value to `Autocomplete` in the form of an active `Option`.
       { value: 3, label: "Serenity" },
       { value: 4, label: "Sleeper Service" },
       { value: 5, label: "Enterprise" },
-      { value: 6, label: "Enterprise-D" }
+      { value: 6, label: "Enterprise-D" },
     ];
     const [value, setValue] = useState();
     return (
@@ -294,7 +294,7 @@ You can supply a value to `Autocomplete` in the form of an active `Option`.
         return options;
       }
       const filterRegex = new RegExp(text, "i");
-      return options.filter(option => option.label.match(filterRegex));
+      return options.filter((option) => option.label.match(filterRegex));
     }
   }}
 </Playground>
@@ -312,7 +312,7 @@ using either promises or `await` in `getOptions`.
       { value: 3, label: "Serenity" },
       { value: 4, label: "Sleeper Service" },
       { value: 5, label: "Enterprise" },
-      { value: 6, label: "Enterprise-D" }
+      { value: 6, label: "Enterprise-D" },
     ];
     const [value, setValue] = useState();
     return (
@@ -325,13 +325,13 @@ using either promises or `await` in `getOptions`.
       />
     );
     async function getOptions(text) {
-      return new Promise(resolve => {
+      return new Promise((resolve) => {
         setTimeout(() => {
           if (text === "") {
             resolve(options);
           }
           const filterRegex = new RegExp(text, "i");
-          resolve(options.filter(option => option.label.match(filterRegex)));
+          resolve(options.filter((option) => option.label.match(filterRegex)));
         }, 300);
       });
     }
