--- a/packages/components/src/Avatar/Avatar.mdx
+++ b/packages/components/src/Avatar/Avatar.mdx
@@ -61,7 +61,7 @@ calendar.
     const style = {
       display: "inline-block",
       marginRight: "5px",
-      verticalAlign: "middle"
+      verticalAlign: "middle",
     };
     return (
       <>
@@ -71,7 +71,7 @@ calendar.
           type="color"
           id="color-picker"
           value={color}
-          onChange={e => setColor(e.target.value)}
+          onChange={(e) => setColor(e.target.value)}
         />
         <hr />
         <div style={style}>
@@ -114,4 +114,5 @@ If an avatar is displayed without a name label, display a tooltip.
 </Playground>
 
 ##### Avatar image credit
+
 [Gabrielle Henderson on Unplash](https://unsplash.com/photos/noSpEJztSMc)
