--- a/packages/components/src/DescriptionList/DescriptionList.mdx
+++ b/packages/components/src/DescriptionList/DescriptionList.mdx
@@ -21,7 +21,12 @@ import { DescriptionList } from "@jobber/components/DescriptionList";
 ```
 
 <Playground>
-  <DescriptionList data={[["Issued", "2018-12-08"], ["Due", "2019-01-06"]]} />
+  <DescriptionList
+    data={[
+      ["Issued", "2018-12-08"],
+      ["Due", "2019-01-06"],
+    ]}
+  />
 </Playground>
 
 ## Props
@@ -44,7 +49,7 @@ You are able to pass a react element in as the second term of the data tuple.
   <DescriptionList
     data={[
       ["Issued", <FormatDate date={new CivilDate(2018, 12, 8)} />],
-      ["Due", <FormatDate date={new CivilDate(2019, 1, 6)} />]
+      ["Due", <FormatDate date={new CivilDate(2019, 1, 6)} />],
     ]}
   />
 </Playground>
