--- a/packages/components/src/FormatFile/FormatFile.mdx
+++ b/packages/components/src/FormatFile/FormatFile.mdx
@@ -35,7 +35,7 @@ import { FormatFile } from "@jobber/components/FormatFile";
         type: "image/png",
         size: 213402324,
         progress: 0.3,
-        src: () => Promise.resolve("https://source.unsplash.com/250x250")
+        src: () => Promise.resolve("https://source.unsplash.com/250x250"),
       }}
       onDelete={() => alert("🧨BALEETED!💥")}
     />
@@ -45,7 +45,7 @@ import { FormatFile } from "@jobber/components/FormatFile";
         name: "tps_report.png",
         type: "application/pdf",
         size: 2134023,
-        progress: 1
+        progress: 1,
       }}
       onDelete={() => alert("🧨BALEETED!💥")}
     />
