--- a/packages/components/src/InputText/InputText.mdx
+++ b/packages/components/src/InputText/InputText.mdx
@@ -88,9 +88,9 @@ shouldn't replace server-side validation.
         validations={{
           required: {
             value: true,
-            message: "You have to tell us your age"
+            message: "You have to tell us your age",
           },
-          validate: validations
+          validate: validations,
         }}
       />
     );
@@ -177,7 +177,7 @@ shouldn't replace server-side validation.
   {() => {
     const [text, setText] = useState("Just some words here.");
     const textRef = React.createRef();
-    const handleTextChange = newValue => {
+    const handleTextChange = (newValue) => {
       setText(newValue);
     };
     const insert = () => {
