--- a/packages/components/src/RadioGroup/RadioGroup.mdx
+++ b/packages/components/src/RadioGroup/RadioGroup.mdx
@@ -127,14 +127,14 @@ text, an `aria-label` should be provided.
       { name: "User 1", initials: "U1" },
       { name: "User 2", initials: "U2" },
       { name: "User 3", initials: "U3" },
-      { name: "User 4", initials: "U4" }
+      { name: "User 4", initials: "U4" },
     ];
     return (
       <>
         <Content>
           <Text>Select a user</Text>
           <RadioGroup onChange={setPhoto} value={company}>
-            {users.map(user => (
+            {users.map((user) => (
               <RadioOption value={user.name}>
                 <Avatar initials={user.initials} name={user.name} />
               </RadioOption>
