--- a/packages/components/src/Toast/Toast.mdx
+++ b/packages/components/src/Toast/Toast.mdx
@@ -32,7 +32,7 @@ import { showToast } from "@jobber/components/Toast";
     label="show toast"
     onClick={() =>
       showToast({
-        message: "Toast has been toasted"
+        message: "Toast has been toasted",
       })
     }
   />
@@ -69,7 +69,7 @@ appropriatly when using Toast.
           onClick={() =>
             showToast({
               message: "Toast is just crispy bread",
-              variation: "info"
+              variation: "info",
             })
           }
         />
@@ -78,7 +78,7 @@ appropriatly when using Toast.
           onClick={() =>
             showToast({
               message: "Toast is great",
-              variation: "success"
+              variation: "success",
             })
           }
         />
@@ -88,7 +88,7 @@ appropriatly when using Toast.
           onClick={() =>
             showToast({
               message: "Toast is burnt",
-              variation: "error"
+              variation: "error",
             })
           }
         />
