--- a/packages/components/src/Avatar/Avatar.mdx
+++ b/packages/components/src/Avatar/Avatar.mdx
@@ -71,7 +71,7 @@ calendar.
           type="color"
           id="color-picker"
           value={color}
-          onChange={(e) => setColor(e.target.value)}
+          onChange={e => setColor(e.target.value)}
         />
         <hr />
         <div style={style}>
