--- a/packages/components/src/ConfirmationModal/ConfirmationModal.mdx
+++ b/packages/components/src/ConfirmationModal/ConfirmationModal.mdx
@@ -87,7 +87,7 @@ that presents a confirm modal.
     ];
     return (
       <>
-        {users.map((user) => {
+        {users.map(user => {
           return (
             <Button
               label={`Confirm ${user.name}`}
