--- a/packages/components/src/Switch/Switch.mdx
+++ b/packages/components/src/Switch/Switch.mdx
@@ -61,7 +61,7 @@ change.
         <br />
         <Switch
           value={toggleState}
-          onChange={(newToggleState) => setToggleState(newToggleState)}
+          onChange={newToggleState => setToggleState(newToggleState)}
           ariaLabel={label}
         />
       </>
