--- a/packages/hooks/src/useFormState/useFormState.mdx
+++ b/packages/hooks/src/useFormState/useFormState.mdx
@@ -37,12 +37,12 @@ import { useFormState } from "@jobber/hooks";
               validations={{
                 required: {
                   value: true,
-                  message: "Tell us your name"
+                  message: "Tell us your name",
                 },
                 minLength: {
                   value: 3,
-                  message: "Your name is to short."
-                }
+                  message: "Your name is to short.",
+                },
               }}
             />
             <InputText
@@ -51,8 +51,8 @@ import { useFormState } from "@jobber/hooks";
               validations={{
                 required: {
                   value: true,
-                  message: "Tell us your last name."
-                }
+                  message: "Tell us your last name.",
+                },
               }}
             />
             <Button
