--- a/packages/hooks/src/useOnKeyDown/useOnKeyDown.mdx
+++ b/packages/hooks/src/useOnKeyDown/useOnKeyDown.mdx
@@ -63,7 +63,7 @@ workflow.
     );
     useOnKeyDown(() => setModifierText(initialModifierText), {
       key: "z",
-      ctrlKey: true
+      ctrlKey: true,
     });
     return (
       <Card title="Escape and Ctrl-z Example">
