--- a/packages/hooks/src/useResizeObserver.mdx
+++ b/packages/hooks/src/useResizeObserver.mdx
@@ -108,9 +108,7 @@ want to use `Breakpoints`.
       return "indigo";
     }
     function getCurrentWidth() {
-      return Object.keys(customWidths).find(
-        (key) => customWidths[key] === width
-      );
+      return Object.keys(customWidths).find(key => customWidths[key] === width);
     }
   }}
 </Playground>
