--- a/packages/components/src/InputGroup/InputGroup.mdx
+++ b/packages/components/src/InputGroup/InputGroup.mdx
@@ -76,7 +76,7 @@ The [Autocomplete component](/components/autocomplete) also works inside the
       { value: 3, label: "Serenity" },
       { value: 4, label: "Sleeper Service" },
       { value: 5, label: "Enterprise" },
-      { value: 6, label: "Enterprise-D" }
+      { value: 6, label: "Enterprise-D" },
     ];
     const [value, setValue] = useState();
     return (
