--- a/packages/components/src/RadioGroup/RadioGroup.mdx
+++ b/packages/components/src/RadioGroup/RadioGroup.mdx
@@ -127,7 +127,7 @@ text, an `aria-label` should be provided.
       { name: "User 1", initials: "U1" },
       { name: "User 2", initials: "U2" },
       { name: "User 3", initials: "U3" },
-      { name: "User 4", initials: "U4" }
+      { name: "User 4", initials: "U4" },
     ];
     return (
       <>
