add some other validation docs

--- a/packages/components/src/InputNumber/InputNumber.mdx
+++ b/packages/components/src/InputNumber/InputNumber.mdx
@@ -84,6 +84,9 @@ no value to the user by offering an incrementer.
 
 ### Invalid
 
+For more information about available `validations`, see the
+[InputText](/components/input-text/#validation-message) docs.
+
 <Playground>
   <InputNumber
     placeholder="Give a whole number"
