--- a/packages/components/src/InputPassword/InputPassword.mdx
+++ b/packages/components/src/InputPassword/InputPassword.mdx
@@ -51,7 +51,7 @@ character-masking, consider using
 
 ## With Error
 
-For more details about `validations`, see the
+For more information about available `validations`, see the
 [InputText](/components/input-text/#validation-message) docs.
 
 <Playground>
