--- a/packages/components/src/Form/Form.mdx
+++ b/packages/components/src/Form/Form.mdx
@@ -21,6 +21,9 @@ import { Button } from "@jobber/components/Button";
 The `Form` component is a wrapper component that handles the submission and
 validation of forms.
 
+For more information about `validations` using any of the `Input` components,
+see the [InputText](/components/input-text/#validation-message) documentation.
+
 ```ts
 import { Form } from "@jobber/components/Form";
 ```
