--- a/packages/components/src/InputValidation/InputValidation.mdx
+++ b/packages/components/src/InputValidation/InputValidation.mdx
@@ -18,8 +18,8 @@ import { InputValidation } from ".";
 `InputValidation` allows you to show the validation messages separate from a
 particular input component.
 
-For more details about `validation` using `Input` components, see the
-[InputText](/components/input-text/#validation-message) documentation.
+For more information about `validations` using any of the `Input` components,
+see the [InputText](/components/input-text/#validation-message) documentation.
 
 ```ts
 import { InputValidation } from "@jobber/components/InputValidation";
